--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border border-top-0 border-right-0 border-left-0 border-warning fixed-top" >
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item col-md-auto ">
-                <a href="menu.html" class="menu nav-link text-white active" >HOME</a>
+                <a href="index.html" class="menu nav-link text-white active" >HOME</a>
             </li>
             <li class="nav-item col-md-auto">
                 <a href="about.html" class="menu nav nav-link text-white" >ABOUT</a>
@@ -118,7 +118,7 @@
                          </div>
                      </div>
                      <div id="nax" class="carousel-item">
-                         <img src="" style="color: white" class="img-fluid" alt="NAKURU" width="1100" height="500">
+                         <img src="img/wp4188870.png" style="color: white" class="img-fluid" alt="NAKURU" width="1100" height="500">
                          <div class="carousel-caption">
                              <h3 class="text-warning">NAKURU</h3>
                          </div>
@@ -137,7 +137,7 @@
                          </div>
                      </div>
                      <div id="kamp" class="carousel-item">
-                         <img src="img/end-cut-p1.jpg" style="color: white" alt="KAMPALA" class="img-fluid" width="1100" height="500">
+                         <img src="img/videoblocks-rare-aerial-footage-in-uganda-of-the-capital-city-kampala_s0rdhkxhvm_thumbnail-full01.png" style="color: white" alt="KAMPALA" class="img-fluid" width="1100" height="500">
                          <div class="carousel-caption">
                              <h3 class="text-warning">KAMPALA</h3>
                          </div>
@@ -164,7 +164,7 @@
         <figure class="col-md-3 ">
            <div class="border border-warning"><img src="img/edu%20dark%20mode.jpg" data-toggle="modal" data-target="#dev" class="img-fluid" alt="developer"></div>
             <br>
-            <div class="figure-caption text-white">
+            <div class="figure-caption text-white" data-toggle="modal" data-target="#dev">
                 <p>EDWIN CHEBII</p>
             </div>
             <button type="button" data-toggle="modal" data-target="#dev" class="btn btn-outline-warning">more</button>
