--- a/advertise.html
+++ b/advertise.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark border border-top-0 border-right-0 border-left-0 border-warning fixed-top" >
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item col-md-auto ">
-                <a href="menu.html" class="menu nav-link text-white active" >HOME</a>
+                <a href="index.html" class="menu nav-link text-white active" >HOME</a>
             </li>
             <li class="nav-item col-md-auto">
                 <a href="about.html" class="menu nav nav-link text-white" >ABOUT</a>
