--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en>">
 <head>
     <meta charset="UTF-8">
-    <title>mymusic/homepage </title>
+    <title>mymusic </title>
     <link rel="stylesheet" href="css/mymusic.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -111,7 +111,7 @@
                                             <br>
                                             <div >&nbsp;&nbsp;
                                                 <label class="float-right custom-control custom-checkbox"></label>
-                                                <input type="checkbox"class=" border-warning bg-transparent">
+                                                <input type="checkbox">
                                                 <span class="custom-control-label small text-warning">remember me</span>
                                             </div>
                                             <button type="submit" class="btn btn-outline-warning col-md-3 float-right">
